feat: info-screen.components
selectedUser is now being displayed at info-screen.components.
if overlayState.selectedUser = empty -> Info Screen default

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -12,7 +12,7 @@
               </div>
             <div class="letter-heading-underline"></div>
       }
-        <div class="user-profile" [class.active]="activeProfileIndex === $index" (click)="toggleSelectedProfile($index)">
+        <div class="user-profile" [class.active]="overlayState.activeProfileIndex === $index" (click)="toggleSelectedProfile($index)">
           <div class="initials">
             {{user.initials}}
           </div>
