--- a/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
+++ b/src/app/shared/nav-footer-mobile/nav-footer-mobile.component.scss
@@ -15,6 +15,10 @@ section {
             color: rgba($color: #FFFFFF, $alpha: 0.5);
             height: 100%;
 
+            @media (max-width:500px) {
+                justify-content: center;
+            }
+
             li {
                 display: flex;
                 flex-direction: column;
@@ -28,6 +32,10 @@ section {
                 width: 100%;
                 height: 100%;
                 border-radius: 1.5em;
+
+                @media (max-width:500px) {
+                    margin: 0;
+                }
 
                 &:hover {
                     cursor: pointer;
