--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,3 +95,15 @@ footer {
 .hidden {
     display: none;
 }
+
+@keyframes fade-in-left {
+    0% {
+        opacity: 0;
+        transform: translateX(20em);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
