--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -72,7 +72,6 @@
             h4 {
                 font-size: 2.7em;
                 font-weight: 400;
-
             }
 
             .line-mobile {
@@ -145,6 +144,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                    gap: 10px;
                     align-items: start;
 
                     h2 {
@@ -163,29 +163,27 @@
 
                     .edit-delete {
                         display: flex;
+                        height: 2.5em;
                         margin-left: 3.6em;
                         gap: 1em;
 
                         @media (max-width: 1300px) {
                             display: none;
                         }
-
-                        .edit {
-                            display: flex;
-                            align-items: center;
-                            font-size: 1.8em;
-                            background-color: white;
-                            border: none;
-                            cursor: pointer;
-                        }
-
+                        .edit,
                         .delete {
                             display: flex;
                             align-items: center;
                             font-size: 1.8em;
+                            width: 4em;
                             background-color: white;
                             border: none;
                             cursor: pointer;
+                            transition: color 0.2s ease;
+                            &:hover {
+                                color: #29abe2;
+                                font-size: 1.9em;
+                            }
                         }
                     }
                 }
@@ -292,7 +290,6 @@
                 border-radius: 20px;
                 border-bottom-right-radius: 0;
                 box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
-                padding: 1em 0.2em;
                 width: 120px;
                 z-index: 100;
                 animation: fade-in-left 0.5s ease-in-out;
@@ -300,9 +297,8 @@
 
             .dropdown-menu div {
                 display: flex;
-                justify-content: center;
                 align-items: center;
-                padding: 1em 1em;
+                padding: 1.5em 2em 1.5em 2em;
                 cursor: pointer;
             }
 
@@ -313,6 +309,8 @@
             }
             .dropdown-menu div:hover {
                 background-color: #f0f0f0;
+                border-radius: 20px;
+                border-bottom-right-radius: 0;
             }
 
             .dropdown-menu img {
@@ -330,17 +328,5 @@
             }
         }
         //#endregion
-    }
-}
-
-@keyframes fade-in-left {
-    0% {
-        opacity: 0;
-        transform: translateX(20em);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
     }
 }
