creating thr help site

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -2,7 +2,7 @@
     <header>
         <div class="kanban"></div>
         <div class="menu">
-            <div class="help"></div>
+            <div class="help" [routerLink]="['/help-site']" routerLinkActive="router-link-active" ></div>
             <span (click)="toggleDropDown()">HA</span>
         </div>
     </header>
