--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,3 +107,25 @@ footer {
         transform: translateX(0);
     }
 }
+
+@keyframes fade-in-left-overlay {
+    0% {
+        opacity: 0;
+        transform: translate(calc(-50% + 50em), -50% );
+    }
+    100% {
+        opacity: 1;
+        transform: translate(-50%, -50%); 
+    }
+}
+
+@keyframes fade-out-right-overlay {
+    0% {
+        opacity: 0;
+        transform: translate(-50, -50% );
+    }
+    100% {
+        opacity: 1;
+        transform: translate(calc(-50% + 50em), -50%); 
+    }
+}
