--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.html
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.html
@@ -1,4 +1,4 @@
-<section class="background-overlay" [class.hidden]="!overlayState.isActive">
+<section class="background-overlay" [class.hidden]="!overlayState.isActive ">
   <div class="content">
     <div class="overlay-contact">
       <div class="mobile-image">
@@ -36,27 +36,26 @@
               @switch (overlayState.AddOrEditState) {
                 @case ('addContact') {
                   <input [(ngModel)]="newContact.fullName" class="user" type="text" placeholder="Name" name="name" required
-                    pattern="[A-Za-zÄÖÜäöüß\s]{2,}" id="name" #name="ngModel"
+                    pattern="[A-Za-zÄÖÜäöüß\s\-']{2,}" id="name" #name="ngModel"
                     [class.invalid]=" name.invalid && name.dirty " />
                   <input [(ngModel)]="newContact.email" class="mail" type="email" placeholder="Email" name="email" required
                     pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel"
                     [class.invalid]=" mail.invalid && mail.dirty " />
                   <input [(ngModel)]="newContact.phone" class="phone" type="tel" placeholder="Phone" name="phone" required
-                    pattern="[0-9]{6,15}" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
+                    pattern="^\+?[0-9\s]{6,25}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
                     
                 } @case ('editContact') {
                   <input [(ngModel)]="editFullName" class="user" type="text" placeholder="Name" name="name" required
-                    pattern="[A-Za-zÄÖÜäöüß\s]{2,}" id="name" #name="ngModel"
+                    pattern="[A-Za-zÄÖÜäöüß\s\-']{2,}" id="name" #name="ngModel"
                     [class.invalid]=" name.invalid && name.dirty " />
                   <input [(ngModel)]="overlayState.selectedUser.email" class="mail" type="email" placeholder="Email" name="email" required
                     pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}" id="mail" #mail="ngModel"
                     [class.invalid]=" mail.invalid && mail.dirty " />
                   <input [(ngModel)]="overlayState.selectedUser.phone" class="phone" type="tel" placeholder="Phone" name="phone" required
-                    pattern="[0-9]{6,15}" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
+                    pattern="^\+?[0-9\s]{6,25}$" id="phone" #phone="ngModel" [class.invalid]=" phone.invalid && phone.dirty " />
                 }
               }
             </form>
-
 
 
             <div class="cancel-create-contact">
