--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -56,6 +56,7 @@
                     left: 23em;
                 }
             }
+
             //#endregion
 
             .line {
@@ -84,6 +85,7 @@
                 }
             }
         }
+
         //#endregion
     }
 
@@ -95,6 +97,7 @@
             flex-direction: column;
             justify-content: center;
             width: 100%;
+
             //#region info container
             .info-container {
                 display: flex;
@@ -120,6 +123,7 @@
                     @media (max-width: 1075px) {
                         margin-left: 2em;
                     }
+
                     @media (max-width: 330px) {
                         width: 7em;
                         height: 7em;
@@ -170,6 +174,7 @@
                         @media (max-width: 1300px) {
                             display: none;
                         }
+
                         .edit,
                         .delete {
                             display: flex;
@@ -180,6 +185,7 @@
                             border: none;
                             cursor: pointer;
                             transition: color 0.2s ease;
+
                             &:hover {
                                 color: #29abe2;
                                 font-size: 1.9em;
@@ -188,6 +194,7 @@
                     }
                 }
             }
+
             //#endregion
 
             //#region detail infos
@@ -232,6 +239,7 @@
                     margin-left: 2em;
                 }
             }
+
             //#endregion
         }
 
@@ -277,6 +285,7 @@
             @media (max-width: 340px) {
                 left: 25em;
             }
+
             //#endregion
 
             &:hover {
@@ -307,6 +316,7 @@
                 justify-content: start;
                 align-items: center;
             }
+
             .dropdown-menu div:hover {
                 background-color: #f0f0f0;
                 border-radius: 20px;
@@ -327,6 +337,17 @@
                 display: none;
             }
         }
+
         //#endregion
     }
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100dvh;
+    z-index: 4;
+    background: rgba($color: #000000, $alpha: 0);
 }
