--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,12 +1,13 @@
 <section>
+    <div id="overlay" class="hidden" (click)="toggleDropDown()"></div>
     <header>
         <div class="kanban"></div>
         <div class="menu">
             <div class="help"></div>
-            <span (click)="toggleDropDown()">HA</span>
+            <span id="user" (click)="toggleDropDown()">HA</span>
         </div>
     </header>
-    <div id="drop-down" class="d-none">
+    <div id="drop-down" class="hidden">
         <p id="help">Help</p>
         <p>Legal Notice</p>
         <p>Privacy Policy</p>
