feat: firebase added

--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -1,7 +1,7 @@
 <section>
     <div class="not-footer">
         <div class="logo">
-        <img src="assets/img/navbar/Join logo vector.png" alt="">
+        <img src="assets/img/navbar/join logo vector.png" alt="">
     </div>
     <nav>
         <ul>
