--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -46,22 +46,14 @@
             .arrow-back {
                 position: absolute;
                 display: none;
-                border: none;
-                background: white;
-                cursor: pointer;
-
-                @media (max-width: 965px) {
-                    left: 19.5em;
-                    display: block;
-                }
 
                 @media (max-width: 750px) {
-                    left: 19.5em;
+                    left: 25em;
                     display: block;
                 }
 
                 @media (max-width: 330px) {
-                    left: 18em;
+                    left: 23em;
                 }
             }
 
@@ -156,6 +148,7 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+                    gap: 10px;
                     align-items: start;
 
                     h2 {
@@ -174,6 +167,7 @@
 
                     .edit-delete {
                         display: flex;
+                        height: 2.5em;
                         margin-left: 3.6em;
                         gap: 1em;
 
@@ -186,10 +180,10 @@
                             display: flex;
                             align-items: center;
                             font-size: 1.8em;
+                            width: 4em;
                             background-color: white;
                             border: none;
                             cursor: pointer;
-
                             transition: color 0.2s ease;
 
                             &:hover {
@@ -305,7 +299,6 @@
                 border-radius: 20px;
                 border-bottom-right-radius: 0;
                 box-shadow: 6px 4px 10px rgba(0, 0, 0, 0.274);
-                padding: 1em 0.2em;
                 width: 120px;
                 z-index: 100;
                 animation: fade-in-left 0.5s ease-in-out;
@@ -313,9 +306,8 @@
 
             .dropdown-menu div {
                 display: flex;
-                justify-content: center;
                 align-items: center;
-                padding: 1em 1em;
+                padding: 1.5em 2em 1.5em 2em;
                 cursor: pointer;
             }
 
@@ -327,6 +319,8 @@
 
             .dropdown-menu div:hover {
                 background-color: #f0f0f0;
+                border-radius: 20px;
+                border-bottom-right-radius: 0;
             }
 
             .dropdown-menu img {
@@ -345,18 +339,6 @@
         }
 
         //#endregion
-    }
-}
-
-@keyframes fade-in-left {
-    0% {
-        opacity: 0;
-        transform: translateX(20em);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateX(0);
     }
 }
 
