--- a/src/app/shared/nav-footer/nav-footer.component.html
+++ b/src/app/shared/nav-footer/nav-footer.component.html
@@ -1,28 +1,16 @@
 <section>
     <div class="not-footer">
         <div class="logo">
-            <img src="assets/img/navbar/join logo vector.png" alt="" />
-        </div>
-        <nav>
-            <ul>
-                <li>
-                    <img src="assets/images/navbar/Summary.png" alt="" />Summary
-                </li>
-                <li>
-                    <img src="assets/images/navbar/Add task.png" alt="" />Add
-                    Task
-                </li>
-                <li>
-                    <img src="assets/images/navbar/Board.png" alt="" />Board
-                </li>
-                <li class="active">
-                    <img
-                        src="assets/images/navbar/Contacts.png"
-                        alt=""
-                    />Contacts
-                </li>
-            </ul>
-        </nav>
+        <img src="assets/img/navbar/join logo vector.png" alt="">
+    </div>
+    <nav>
+        <ul>
+            <li><img src="assets/img/navbar/Summary.png" alt="">Summary</li>
+            <li><img src="assets/img/navbar/Add task.png" alt="">Add Task</li>
+            <li><img src="assets/img/navbar/Board.png" alt="">Board</li>
+            <li class="active"><img src="assets/img/navbar/Contacts.png" alt="">Contacts</li>
+        </ul>
+    </nav>
     </div>
     <footer>
         <a href="">Privacy Policy</a>
