--- a/src/app/shared/nav-footer/nav-footer.component.scss
+++ b/src/app/shared/nav-footer/nav-footer.component.scss
@@ -1,15 +1,12 @@
-html {
-    font-size: 10px;
-}
-
 section {
+    font-size: 10px;
     display: flex;
     flex-direction: column;
     height: 100dvh;
     width: 15rem;
     background: #2a3647;
     z-index: 5;
-    padding: 3rem 0;
+    padding: 4.8em 0;
 
     @media (max-width: 965px) {
         display: none;
@@ -25,13 +22,15 @@ section {
             width: 100%;
             display: flex;
             justify-content: center;
+            margin-bottom: 11em;
 
             img {
-                height: 7rem;
+                height: 11.2em;
             }
         }
 
         nav {
+
             ul {
                 display: flex;
                 flex-direction: column;
@@ -44,9 +43,10 @@ section {
                     align-items: center;
                     font-size: 1rem;
                     font-weight: lighter;
-                    padding: 0.5rem;
+                    padding: 0.3em;
                     width: 100%;
-                    margin: 0.4rem 0;
+
+                    margin: 0.6em 0;
 
                     &:hover {
                         cursor: pointer;
@@ -54,8 +54,8 @@ section {
                     }
 
                     img {
-                        margin-right: 0.5rem;
-                        margin-left: 2.5rem;
+                        margin-right: 0.8em;
+                        margin-left: 3em;
                         opacity: 0.5;
                     }
                 }
@@ -81,16 +81,16 @@ section {
     footer {
         height: 50dvh;
         display: flex;
-        margin-left: 2.5rem;
+        margin-left: 3.5em;
         flex-direction: column;
         align-items: flex-start;
         justify-content: flex-end;
-        font-size: 1rem;
 
         a {
             color: white;
-            padding: 0.5rem;
+            padding: 0.5em;
             opacity: 0.5;
+            font-size: 1.6em;
 
             &:hover {
                 opacity: 1;
