--- a/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
+++ b/src/app/contacts/overlay-contacts/overlay-contacts.component.scss
@@ -37,6 +37,10 @@
             transform: translate(-50%, -50%);
             width: 120em;
             height: 70dvh;
+            @media (min-width: 750px) {
+                            max-height: 70em;
+
+            }
             animation: fade-in-left-overlay 0.5s ease-in-out;
             .mobile-image {
                 display: none;
