--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -58,7 +58,7 @@
         <div class="edit-mobilebtn" (click)="toggleDropdown()" tabindex="0">
           <img src="assets/img/info-screen/more_vert.png" alt="edit menu" />
           <div class="dropdown-menu" *ngIf="isDropdownOpen" (click)="$event.stopPropagation()">
-            <div class="edit" (click)="toggleOverlay() + overlayState.AddOrEditState ='editContact'">
+            <div class="edit" (click)="toggleOverlay() + overlayState.AddOrEditState ='editContact'; toggleDropdown()">
               <img src="assets/img/info-screen/edit.svg" alt="edit" />
               <p>Edit</p>
             </div>
