fixed responsive design

--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -94,10 +94,7 @@
                     (click)="toggleDropdown()"
                     tabindex="0"
                 >
-                    <img
-                        src="assets/img/info-screen/more_vert.png"
-                        alt="edit menu"
-                    />
+                    <img src="assets/images/more_vert.png" alt="edit menu" />
                     <div
                         class="dropdown-menu"
                         *ngIf="isDropdownOpen"
