--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -56,7 +56,27 @@
                 }
 
                 @media (max-width: 750px) {
-                    left: 19.5em;
+                    left: 48em;
+                    display: block;
+                }
+
+                @media (max-width: 700px) {
+                    left: 40em;
+                    display: block;
+                }
+
+                @media (max-width: 595px) {
+                    left: 32em;
+                    display: block;
+                }
+
+                @media (max-width: 485px) {
+                    left: 24em;
+                    display: block;
+                }
+
+                @media (max-width: 380px) {
+                    left: 20em;
                     display: block;
                 }
 
@@ -163,12 +183,16 @@
                         font-weight: 700;
                         margin-left: 0.4em;
 
-                        @media (max-width: 1130px) {
+                        @media (max-width: 1160px) {
                             font-size: 4em;
                         }
 
-                        @media (max-width: 1040px) {
+                        @media (max-width: 1060px) {
                             font-size: 3em;
+                        }
+
+                        @media (max-width: 345px) {
+                            font-size: 2.5em;
                         }
                     }
 
@@ -205,13 +229,12 @@
 
             //#region detail infos
             .contactinfos {
-                margin-top: 3em;
                 margin-left: 2.2em;
                 font-size: 2em;
                 margin-bottom: 1em;
 
                 @media (max-width: 1075px) {
-                    margin-left: 2em;
+                    margin-left: 1.3em;
                 }
             }
 
@@ -253,7 +276,7 @@
         .edit-mobilebtn {
             position: absolute;
             left: 55em;
-            top: 49em;
+            top: 51em;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -285,7 +308,31 @@
             }
 
             @media (max-width: 1040px) {
-                left: 27.5em;
+                left: 30em;
+            }
+
+            @media (max-width: 1005px) {
+                left: 28em;
+            }
+
+            @media (max-width: 750px) {
+                left: 64em;
+            }
+
+            @media (max-width: 700px) {
+                left: 53em;
+            }
+
+            @media (max-width: 595px) {
+                left: 42.5em;
+            }
+
+            @media (max-width: 485px) {
+                left: 32em;
+            }
+
+            @media (max-width: 380px) {
+                left: 26em;
             }
 
             @media (max-width: 340px) {
