--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -12,7 +12,7 @@
                     <button (click)="close()" class="arrow-back">
                         <img
                             class="backbtn"
-                            src="assets/images/arrow-left-line.png"
+                            src="assets/img/info-screen/arrow-left-line.png"
                             alt="back"
                         />
                     </button>
@@ -94,7 +94,10 @@
                     (click)="toggleDropdown()"
                     tabindex="0"
                 >
-                    <img src="assets/images/more_vert.png" alt="edit menu" />
+                    <img
+                        src="assets/img/info-screen/more_vert.png"
+                        alt="edit menu"
+                    />
                     <div
                         class="dropdown-menu"
                         *ngIf="isDropdownOpen"
