initial background color
random backgroundcolor for initial in contactlist, db and infoscreen added

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -15,7 +15,7 @@
       }
       <div class="user-profile" [class.active]="overlayState.activeProfileIndex === $index"
         (click)="toggleSelectedProfile($index)">
-        <div class="initials">
+        <div class="initials" [style.background]= user.color>
           {{user.initials}}
         </div>
         <div class="user-details">
