--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -25,7 +25,7 @@
     <section>
       <div class="content">
         <div class="info-container">
-          <div class="initiales-bg">
+          <div class="initiales-bg" [style.background] = overlayState.selectedUser.color>
             <p>{{overlayState.selectedUser.initials}}</p>
           </div>
 
