--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,24 +1,13 @@
 <section>
-  <div class="content">
-    <div class="new-contact">
-      <button (click)="toggleOverlay() + overlayState.AddOrEditState ='addContact' " class="add-button">Add new contact
-        <img src="assets/img/contactList/personAddIcon.png"></button>
-    </div>
-    <div class="user-profiles-container">
-      @for (user of overlayState.contactList; track $index) {
-        @if ($index === 0 || user.firstName.charAt(0).toUpperCase() !==
-          overlayState.contactList[$index-1].firstName.charAt(0).toUpperCase()) {
-          <div class="letter-heading-container">
-            <h2 class="letter-heading">{{ user.firstName.charAt(0).toUpperCase() }}</h2>
-          </div>
-          <div class="letter-heading-underline"></div>
-      }
-    
-      <div class="user-profile" [class.active]="overlayState.activeProfileIndex === $index"
-        (click)="toggleSelectedProfile($index)">
-        <div class="initials" [style.background]= user.color>
-          {{user.initials}}
-
+    <div class="content">
+        <div class="new-contact">
+            <button (click)="
+                    toggleOverlay() +
+                        (overlayState.AddOrEditState = 'addContact')
+                " class="add-button">
+                Add new contact
+                <img src="assets/img/contactList/personAddIcon.png" />
+            </button>
         </div>
         <div class="user-profiles-container">
             @for (user of overlayState.contactList; track $index) { @if ($index
@@ -32,12 +21,9 @@
             </div>
             <div class="letter-heading-underline"></div>
             }
-            <div
-                class="user-profile"
-                [class.active]="overlayState.activeProfileIndex === $index"
-                (click)="toggleSelectedProfile($index)"
-            >
-                <div class="initials">
+            <div class="user-profile" [class.active]="overlayState.activeProfileIndex === $index"
+                (click)="toggleSelectedProfile($index)">
+                <div class="initials" [style.background]="user.color">
                     {{ user.initials }}
                 </div>
                 <div class="user-details">
@@ -50,6 +36,4 @@
             }
         </div>
     </div>
-    
 </section>
-      
