contact info backbutton, responsive
added functionality for contact-info back button. added responsive for mobile view.

--- a/src/app/contacts/contact-list/contact-list.component.html
+++ b/src/app/contacts/contact-list/contact-list.component.html
@@ -1,4 +1,4 @@
-<section>
+<section class="contactListSection">
   <div class="content">
     <div class="new-contact">
       <button (click)="toggleOverlay() + overlayState.AddOrEditState ='addContact' " class="add-button">Add new contact
