--- a/src/app/contacts/contact-list/contact-list.component.scss
+++ b/src/app/contacts/contact-list/contact-list.component.scss
@@ -4,8 +4,8 @@ section {
     overflow-y: auto;
     overflow-x: hidden;
 
-    @media (max-width: 750px) {
-        display: none;
+    @media (max-width:750px) {
+        width: 100%;
     }
 
     .content {
