--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -21,11 +21,13 @@
 }
 
 .contact-list-component {
-    display: flex;
     height: auto;
 }
 
 .info-screen-component {
-    display: flex;
     height: auto;
+
+    @media (max-width:750px) {
+        display: none;
+    }
 }
