--- a/src/app/contacts/info-screen/info-screen.component.scss
+++ b/src/app/contacts/info-screen/info-screen.component.scss
@@ -47,6 +47,10 @@
                 position: absolute;
                 display: none;
 
+                &:hover {
+                    cursor: pointer;
+                }
+
                 @media (max-width: 750px) {
                     left: 25em;
                     display: block;
@@ -114,6 +118,7 @@
                     background: #ff7a00;
                     border: 0.3em solid white;
                     border-radius: 50%;
+                    box-shadow: 0px 0px 4px 1px rgba($color: #000000, $alpha: 0.2);
 
                     @media (max-width: 1130px) {
                         width: 9em;
