deletefunction on dropdown menu
added click-function to deletebutton in dropdownmenu

--- a/src/app/contacts/info-screen/info-screen.component.html
+++ b/src/app/contacts/info-screen/info-screen.component.html
@@ -61,7 +61,7 @@
               <img src="assets/img/info-screen/edit.svg" alt="edit" />
               <p>Edit</p>
             </div>
-            <div class="delete">
+            <div class="delete" (click)="overlayState.deleteContact(); toggleDropdown()">
               <img src="assets/img/info-screen/delete.svg" alt="delete" />
               <p>Delete</p>
             </div>
